<resources>
    <string name="app_name">MercaCaiza</string>
    <string name="ok">OK</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="volver">Volver atrás</string>
    <string name="registro_usuarios">Registro de usuarios</string>
    <string name="intro_administrar_usuarios">Esta aplicación requiere un usuario registrado. En esta pantalla podrá <b>crear</b> uno si no lo ha hecho o <b>identificarse</b> si ya tiene uno creado anteriormente</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmacion_contrasena">Confirmación de contraseña</string>
    <string name="crear_usuario">Crear usuario</string>
    <string name="identificar_usuario">Identificar usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="contrasena_no_coincide_con_confirmacion">La contraseña suministrada no coincide con la confirmación. Por favor revise nuevamente su contraseña y la confirmación.</string>
    <string name="reglas_de_contrasena">La contraseña debe tener al menos 6 caracteres.</string>
    <string name="usuario_valido">Usuario validado con éxito</string>
    <string name="sesion_cerrada">La sesión se cerró con éxito. Por favor cree un usuario nuevo o valide otro existente para usar esta aplicación.</string>
    <string name="olvidaste_contrasena">¿Olvidaste la contraseña?</string>
    <string name="instrucciones_regenerar_contrasena">Le será enviado un vínculo a la dirección de correo electrónico que especificó arriba para regenerar la contraseña. Revise ese correo en este dispositivo, haga click en el vínculo que tiene y cuando se le pregunte indique que desea abrir el vínculo con esta aplicación. ¿Desea continuar?</string>
    <string name="renovar_contrasena">Renovar contraseña</string>
    <string name="renovacion_contrasena">Renovación de contraseña</string>
    <string name="error_recobrando_contrasena">No se pudo recobrar la contraseña:</string>
    <string name="proceso_culminado">Proceso culminado. Su contraseña ha sido guardada. Puede volver a la aplicación luego que se cierre esta ventana.</string>
    <string name="puede_cambiar_contrasena">Ahora puede cambiar la contraseña</string>
    <string name="correo_enviado">Se le ha enviado un correo electroníco</string>
    <string name="productos">Productos</string>
    <string name="tiendas">Tiendas</string>
    <string name="mi_tienda">Mi tienda</string>
    <string name="ajustes">Ajustes</string>
    <string name="preregistro_tienda_1">Puedes registrar tu propia tienda acá. Ponte en contacto con los desarrolladores para obtener tu pase de entrada.</string>
    <string name="inserte_llave">Escribe la llave aquí</string>
    <string name="registrar">Registrar</string>
    <string name="registrar_tienda">Registrar mi tienda</string>
    <string name="editor_tienda_nombre">Indica el nombre que tu tienda o comercio verán los usuarios en la aplicación.</string>
    <string name="editor_tienda_imagen">Selecciona una imagen que identificará a tu tienda. Ten en cuenta que sus dimensiones serán reducidas para se ajuste al tamaño de la aplicación. <i>Haz clic sobre la imagen para abrir la galería.</i></string>
    <string name="editor_tienda_palabras_clave">Indica las palabras claves que identifican a los productos o servicios que ofreces, separadas por comas. Por ejemplo, si tu comercio es con pan escribe algo así:  <b>pan,canilla,sobado,dulce</b></string>
    <string name="nombre_tienda_sensacional">¡Mi nombre sensacional!</string>
    <string name="ejemplo_categorias">pan,canilla,sobado,galletas,jugos,jamón,queso</string>
    <string name="direccion_fisica">Dirección física</string>
    <string name="telefono">Teléfono de contacto</string>
    <string name="guardar">Guardar</string>
    <string name="nombres_responsable">Nombres y apellidos de la persona responsable</string>
    <string name="cedula_identidad_rif">Cédula de identidad o RIF</string>
    <string name="modelo_cedula_rif">V12345678 o J1234567</string>
    <string name="carga_identificacion">Ahora has clic en el siguiente botón para cargar una imagen de la cédula o del RIF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="administrar_datos_usuario">Administar datos de usuarios</string>
    <string name="administrar_mi_tienda">Administrar mi tienda</string>
    <string name="establecer_valor_dolar">Establecer valor del dólar americano($)</string>

    <string name="error_al_guardar">Error guardando datos:</string>

</resources>